modified posts category jekyll -> etc

--- a/_posts/2021-12-15-안녕하세요-!.md
+++ b/_posts/2021-12-15-안녕하세요-!.md
@@ -4,7 +4,7 @@ title: "안녕하세요 !"
 summary: "This is a sample post 2 by jjunghoo !"
 author: jjunghoo
 date: "2021-12-15 01:45:23 +0900"
-category: jekyll
+category: etc
 thumbnail: /assets/img/posts/code.jpg
 ---
 
